[package]
name = "timelock_wallet"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]
name = "timelock_wallet"


[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }